Tabbed view: Fix main-nav for small screens
Make tab's size dynamic
 - Font-size
 Instead of using always a font size that looks nice in a wide screen
 but that  will look cramped and  without space in a narrow window:
   - change it's size depending on  viewport within a safe range
   - new css vars added and respective comment in the code
   - Also we use clamp css function but we also add a fallback for old
   browser using the generic calc css function
 - Padding: allow to get lower levels when the viewport is reduced

Hide document-header when the window is narrower than 800px
- this frees up space and also benefits tablet us case where user uses
2 apps side by side

Document-title bar
 - Hide document name if the window is too small. This makes it
 possible to fit all buttons without horizontally scrolling the main-nav
 - Note user can always access the rename feature by going to File > Rename button
 - Remove any hard coded pixel positioning and instead rely solely on
 flex layout

Main-nav
 - should always occupy (width wise) 100% of the viewport. We want
 always the far left icons be always at the end of the viewport

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -20,6 +20,16 @@
 
 	--default-font-size: 12px;
 	--header-font-size: 16px;
+	/* tab min font-size */
+	--tb-min-fs: 11px;
+	/* tab min font-size without units*/
+	--tb-min-fs-u: 11;
+	/* tab max font-size */
+	--tb-max-fs: 16px;
+	/* tab max font-size wihtout units*/
+	--tb-max-fs-u: 16;
+	/* tab font-size preferred value or scaler */
+	--tb-fs-s: 1vw;
 
 	--default-height: 24px;
 	--header-height: 38px;
